fix alignment of table headers

--- a/immuneML/presentation/html/templates/css/custom.css
+++ b/immuneML/presentation/html/templates/css/custom.css
@@ -121,6 +121,7 @@ a:hover {
     background-color: var(--accent-color);
     color: white;
     font-weight: 600;
+    text-align: left;
     padding: 12px 16px;
     border-bottom: 2px solid var(--accent-color);
 }
